<resources>
    <string name="app_name">InventoryApp</string>

    <!--Title of the page-->
    <string name="add_product">Add a product</string>
    <string name="edit_product">Edit product</string>

    <!--Messages-->
    <string name="empty_view_title_text">There is no product to display</string>
    <string name="empty_view_subtitle_text">Let\'s start adding some product</string>
    <string name="editor_delete_product_failed">Error with deleting product.</string>
    <string name="editor_delete_product_successful">Product deleted.</string>
    <string name="insert_product_failed">Error with saving product</string>
    <string name="insert_product_successfull">Product Saved</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="update_product_fail">Error with updating product</string>
    <string name="update_product_success">Product Updated</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="sold">An item has sold</string>
    <string name="not_enough_inventory">Not enough inventory to sell</string>
    <string name="sold_out">Sold out</string>
    <string name="empty_fields">Please fill all related fields</string>

    <!--Buttons-->
    <string name="call">Make a Call</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <!--Fields-->
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Suppliers Name</string>
    <string name="supplier_phone">Suppliers Phone</string>

</resources>
